syntax = "proto3";

package saas.api.uuid.servicev1;

option go_package           = "github.com/go-micro-saas/service-api/api/uuid-service/v1/services;servicev1";
option java_multiple_files  = true;
option java_package         = "saas.api.uuid.servicev1";
option java_outer_classname = "SaasApiUuidServiceV1";

import "google/api/annotations.proto";
import "api/uuid-service/v1/resources/uuid.resource.v1.proto";

// SrvUuidV1 service
service SrvUuidV1 {
  // 获取ID
  rpc NextID(saas.api.uuid.resourcev1.NextIDReq) returns (saas.api.uuid.resourcev1.NextIDResp) {
    option (google.api.http) = {
      get: "/api/v1/uuid/next-id"
      // body: "*"
    };
  }
}